kubernetes/src/main/resources/02-Ingress-controller/03-annotation/06-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: null
  name: xiang-ssl
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: ssl.yuncen-k8s.com
    http:
      paths:
      - backend:
          service:
            name: simple-fanout-a-dep
            port:
              number: 80
        path: /a
        pathType: Exact
      - backend:
          service:
            name: simple-fanout-b-dep
            port:
              number: 80
        path: /b
        pathType: Exact
  tls:
  - hosts:
    - ssl.yuncen-k8s.com
    secretName: xiang-tls
status:
  loadBalancer: {}
